Colour updates for Parline link boxes.

--- a/web/themes/ipu/src/sass/_ipu-variables.scss
+++ b/web/themes/ipu/src/sass/_ipu-variables.scss
@@ -66,6 +66,8 @@ $ipu-extra-light-grey: #fafafa;
 $ipu-white: #ffffff;
 $ipu-black: $gray-900;
 
+$ipu-parline-green: #7ABEC3;
+$ipu-parline-green-light: #F2F9F9;
 
 $colors: () !default;
 // stylelint-disable-next-line scss/dollar-variable-default
