Multiple changes for adding modules protected pages (manually) and pfdp (private file download permissions), new paragraph, added to basic page content type, minor theme styling updates.

--- a/web/themes/ipu/src/sass/block/_block2.scss
+++ b/web/themes/ipu/src/sass/block/_block2.scss
@@ -171,3 +171,14 @@ ul.flickr-block {
   border-radius: 4px;
   margin-bottom: 10px;
 }
+
+#protected-pages-enter-password {
+  @extend .container;
+}
+.basic-page__field-private-documents {
+  & > .field__label {
+    @extend h2;
+    font-weight: $font-weight-light !important;
+    margin: 30px 0;
+  }
+}
