Partial fix for event sections/document title and description.

--- a/web/modules/custom/ipu_events/templates/ipu-events-event-documents.html.twig
+++ b/web/modules/custom/ipu_events/templates/ipu-events-event-documents.html.twig
@@ -14,8 +14,11 @@
 <h2 class="event-sub-page__title">{{ title }}</h2>
 
 <div class="ipu-event-documents">
+  <div class="ipu-event-documents-description">
+    {{ description }}
+  </div>
   <div class="ipu-event-documents-documents">
-      {{ documents }}
+    {{ documents }}
   </div>
   <div class="ipu-event-documents-session-documents">
     {{ session_documents }}
