Fix for header search submit button, ampersand in footer

--- a/web/themes/ipu/src/sass/block/_block.scss
+++ b/web/themes/ipu/src/sass/block/_block.scss
@@ -1114,7 +1114,9 @@ a.btn {
     border-bottom-width: 0px;
   }
 }
-
+#branding #search-block-form #edit-actions {
+  position: relative;
+}
 #branding .form-actions::after {
   content: "\f002" !important;
   color: $tertiary;
