--- a/web/themes/ipu/templates/page/page--search.html.twig
+++ b/web/themes/ipu/templates/page/page--search.html.twig
@@ -111,7 +111,7 @@
         {% set privacy = link('Privacy statement'|t, 'internal:/node/9571')|render %}
         {% set year = "now"|date("Y") %}
         {% set copyright = 'Copyright IPU'|t %}
-        <p>© {{ copyright }} {{ year }}, {{ terms }}&nbsp;&amp;amp; {{ privacy }}</p>
+        <p>© {{ copyright }} {{ year }}, {{ terms }}&nbsp;&amp; {{ privacy }}</p>
       </div>
     </footer>
   {% endif %}
